# 3dslink

./: CMakeLists.txt  Makefile  README.md
3ds/: .gitignore  Makefile
3ds/source/: main.c
host/: .gitignore  Makefile.am  configure.ac
host/src/: main.c
source/: main.c
